js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/lib1/l1.9.kt
@JsExport
fun foo() = 0

@JsExport.Default
class ExportedClass(val value: Int) {
    fun getValue() = value
}